@@ -1,0 +1,4 @@
+
+% This file has ledger lines and a slur
+
+\score { \notes { c4-(  c4-) } }
