@@ -1,5 +1,7 @@
 2003-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* site/download/windows.html: rewrite 
+
 	* GNUmakefile (upload): call chgrp.
 
 2003-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>
